add replica selector and manager